tests/pass/02_scope.lang
целое х = 100;
{
    целое х = 200;
}
