tests/fail/07_uninitialized.lang
функция Начало() : целое {
    целое х;
    вернуть 0;
}
